# rtop

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ASCII_LOGOS.md
src/: error.rs  lib.rs  main.rs
src/app/: config.rs  highlight.rs  mod.rs  state.rs  status.rs  view_mode.rs
src/app/state/: actions.rs  containers.rs  gpu.rs  logo.rs  mod.rs  rows.rs  selection.rs  tree.rs  types.rs
src/data/: container.rs  mod.rs  process.rs  sorting.rs
src/data/container/: cgroup.rs  mod.rs  net.rs  types.rs
src/data/cpu/: cache.rs  cpuinfo.rs  database.rs  mod.rs
src/data/gpu/: drm.rs  lspci.rs  mod.rs  monitor.rs  nvidia.rs  provider.rs  sysfs.rs  types.rs
src/events/: handler.rs  mod.rs  types.rs
src/ui/: confirm.rs  containers.rs  footer.rs  gpu.rs  header.rs  help.rs  mod.rs  process_graph.rs  processes.rs  setup.rs  stats.rs  system.rs  text.rs  theme.rs  widgets.rs
src/ui/processes/: gpu_table.rs  mod.rs  process_table.rs  search.rs
src/ui/system/: info.rs  logo.rs  mod.rs
src/ui/system/info/: hardware.rs  icons.rs  layout.rs  mod.rs  os.rs  overview.rs  packages.rs  software.rs  tabs.rs
src/ui/system/logo/: ascii.rs  mod.rs  palette.rs  render.rs  svg.rs
src/utils/: command.rs  format.rs  mod.rs
