[package]
name = "rtop"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
dirs = "5.0"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
thiserror = "2.0"
toml = "0.8"
unicode-width = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libpci = { version = "0.1.3", features = ["std"], optional = true }

[features]
default = []
pci-names = ["libpci"]
