[package]
name = "rtop"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
dirs = "5.0"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.37"
thiserror = "2.0"
toml = "0.8"
unicode-width = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libpci = { version = "0.1.3", features = ["std"], optional = true }

[features]
default = []
pci-names = ["libpci"]
