[package]
name = "rtop"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
crossterm = "0.29"
dirs = "6.0.0"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml_ng = "0.10.0"
resvg = "0.45.1"
sysinfo = "0.37.2"
thiserror = "2.0.17"
toml = "0.9.10+spec-1.1.0"
unicode-width = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
libpci = { version = "0.1.3", features = ["std"], optional = true }

[features]
default = []
pci-names = ["libpci"]
